# odoo-ai-ops

./: .gitattributes  .gitignore  C4_Component.puml  C4_Container.puml  C4_Context.puml  CHANGELOG.md  LICENSE  Makefile  README.md  architecture.txt  cost_analysis.txt  dev.conf  docker-compose.yml
.github/workflows/: aws.yml  ci.yml  destroy.yml  terraform-test.yml
agent/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
agent/app/: __init__.py  checkpointer.py  config.py  llm.py  main.py  odoo_client.py  runtime.py  schemas.py  security.py  slack_client.py  sqs_worker.py  telemetry.py
agent/app/graph/: __init__.py  fraud_graph.py  reconciliation_graph.py  state.py
agent/app/routers/: health.py  tasks.py
agent/tests/: conftest.py  test_health.py  test_llm_and_graph.py  test_routing.py  test_security.py  test_slack_client.py
agent/tests/integration/: README.md  check_secret.py  edge_shim.py  run.sh  run_edge_shim.sh  test_fullstack.py  test_live_llm.py
custom_addons/customer_reporting/: __manifest__.py
custom_addons/customer_reporting/data/: cron.xml
custom_addons/customer_reporting/models/: customer_reporting.py
custom_addons/odoo_ai_ops/: README.md  __init__.py  __manifest__.py  ruff.toml
custom_addons/odoo_ai_ops/controllers/: webhook.py
custom_addons/odoo_ai_ops/data/: ir_config_parameter.xml  ir_cron.xml  ir_sequence.xml
custom_addons/odoo_ai_ops/models/: __init__.py  ai_ops_inventory.py  ai_ops_order_intake.py  ai_ops_order_risk.py  ai_ops_settings.py  ai_ops_task.py  (+1 more)
docs/: Architecture.txt  C4_Component.puml  C4_Container.puml  Container.txt  Networking.txt
lambda/tests/: conftest.py  test_handler.py
lambda/webhook_authorizer/: handler.py
templates/: Dockerfile.clickhouse  Dockerfile.fastapi  Dockerfile.odoo  clickhouse-task.json  docker-entrypoint-nginx.sh  docker-entrypoint.sh  fastapi-task.json  langfuse-task.json  nginx.conf  odoo-bootstrap.py  odoo-task.json  odoo.conf  patch_redis_session.py  pgbouncer-task.json
templates/clickhouse/: storage.xml
terraform/: .terraform.lock.hcl  agent_lambdas.tf  alb.tf  bedrock.tf  compute.tf  data.tf  iam.tf  locals.tf  main.tf  moved.tf  outputs.tf  providers.tf  security.tf  variables.tf  versions.tf
terraform/tests/: apply.tftest.hcl  plan.tftest.hcl
(+54 files in other folders)
